fixed css alignment issue with picture

--- a/java/module-3/module3-final-project/client/src/assets/base.css
+++ b/java/module-3/module3-final-project/client/src/assets/base.css
@@ -24,9 +24,11 @@ header {
 }
 
 .music-image {
-  /*width: 700px;
-  height: 200px;*/
+  display: block;
+  width: 700px;
+  height: 200px;
   object-fit: cover;
+  margin: 0 auto;
 }
 
 nav ul {
